--- a/OOP/index.html
+++ b/OOP/index.html
@@ -22,7 +22,7 @@
         color: white;
       }
     </style>
-    <script defer src="inheritance.js"></script>
+    <script defer src="challenge.js"></script>
   </head>
   <body>
     <h1>Object Oriented Programming (OOP) With JavaScript</h1>
